--- a/tests/精神分析/调节心中对人格有决定性影响的父母关系（治疗）.md
+++ b/tests/精神分析/调节心中对人格有决定性影响的父母关系（治疗）.md
@@ -1,4 +1,4 @@
-调节心中对人格有决定性影响的父母关系
+调节心中对[[人格]]有决定性影响的父母关系
 重构
 被恰当对待治疗师能够恰当的对待来访者这本身就是一个最高级的治疗
 心理治疗只有一个目的就是增加来访者的自我功能，让来访者自我足够强大，能够应对与本我之间的冲突，能够应对外界
