new file:   __pycache__/knowledge_graph_builder.cpython-39.pyc 	deleted:    add_personality_links.py 	deleted:    debug_keyword_processing.py 	deleted:    detailed_debug.py 	deleted:    focused_test.py 	modified:   src/cognitive_weaver/__pycache__/ai_inference.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/keyword_extractor.cpython-39.pyc 	modified:   src/cognitive_weaver/ai_inference.py 	modified:   src/cognitive_weaver/keyword_extractor.py 	deleted:    test_ai_similarity.py 	deleted:    test_keyword_extraction.py 	deleted:    test_keyword_processing.py 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\344\270\252\344\272\272\347\232\204\347\226\276\347\227\205\346\230\257\346\224\273\345\207\273\346\200\247\345\222\214\345\212\233\346\257\224\345\244\232\346\212\225\346\263\250\346\210\226\346\212\225\346\263\250\346\226\271\345\274\217\345\207\272\344\272\206\351\227\256\351\242\230.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\344\270\252\344\272\272\347\232\204\347\226\276\347\227\205\346\230\257\346\224\273\345\207\273\346\200\247\345\222\214\345\212\233\346\257\224\345\244\232\346\212\225\346\263\250\346\210\226\346\212\225\346\263\250\346\226\271\345\274\217\345\207\272\344\272\206\351\227\256\351\242\230.md.bak" 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\347\272\247\350\257\215\346\261\207\344\272\214\347\272\247\350\257\215\346\261\207\357\274\210\346\224\273\345\207\273\346\200\247and\345\256\211\345\205\250\346\204\237\343\200\201\350\207\252\345\215\221\357\274\211.md" 	new file:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\347\272\247\350\257\215\346\261\207\344\272\214\347\272\247\350\257\215\346\261\207\357\274\210\346\224\273\345\207\273\346\200\247and\345\256\211\345\205\250\346\204\237\343\200\201\350\207\252\345\215\221\357\274\211.md.bak" 	modified:   "tests/\347\262\276\347\245\236\345\210\206\34

--- a/tests/精神分析/调节心中对人格有决定性影响的父母关系（治疗）.md
+++ b/tests/精神分析/调节心中对人格有决定性影响的父母关系（治疗）.md
@@ -1,4 +1,4 @@
-调节心中对[[人格]]有决定性影响的父母关系
+调节心中对[[人格]]有决定性影响的[[父母]]关系
 重构
-被恰当对待治疗师能够恰当的对待来访者这本身就是一个最高级的治疗
-心理治疗只有一个目的就是增加来访者的自我功能，让来访者自我足够强大，能够应对与本我之间的冲突，能够应对外界
+被恰当对待[[治疗师]]能够恰当的对待来访者这本身就是一个最高级的[[治疗]]
+心理[[治疗]]只有一个目的就是增加来访者的[[自我]]功能，让来访者[[自我]]足够强大，能够应对与本我之间的[[冲突]]，能够应对外界
