modified:   .gitignore 	deleted:    __pycache__/__init__.cpython-39.pyc 	deleted:    __pycache__/ai_inference.cpython-39.pyc 	deleted:    __pycache__/cli.cpython-39.pyc 	deleted:    __pycache__/config.cpython-39.pyc 	deleted:    __pycache__/knowledge_graph_builder.cpython-39.pyc 	deleted:    __pycache__/monitor.cpython-39.pyc 	deleted:    __pycache__/parser.cpython-39.pyc 	deleted:    __pycache__/rewriter.cpython-39.pyc 	modified:   src/cognitive_weaver/__init__.py 	modified:   src/cognitive_weaver/__pycache__/__init__.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/ai_inference.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/cli.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/config.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/keyword_extractor.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/knowledge_graph.cpython-39.pyc 	modified:   src/cognitive_weaver/__pycache__/rewriter.cpython-39.pyc 	modified:   src/cognitive_weaver/ai_inference.py 	modified:   src/cognitive_weaver/cli.py 	modified:   src/cognitive_weaver/config.py 	modified:   src/cognitive_weaver/keyword_extractor.py 	modified:   src/cognitive_weaver/knowledge_graph.py 	modified:   src/cognitive_weaver/rewriter.py 	renamed:    test_ai_connection.py -> tests/test_data/test_ai_connection.py 	renamed:    test_ai_simple.py -> tests/test_data/test_ai_simple.py 	renamed:    test_basic_functionality.py -> tests/test_data/test_basic_functionality.py 	renamed:    test_end_to_end.py -> tests/test_data/test_end_to_end.py 	renamed:    test_full_pipeline.py -> tests/test_data/test_full_pipeline.py 	renamed:    test_mock_mode.py -> tests/test_data/test_mock_mode.py 	renamed:    test_parser.py -> tests/test_data/test_parser.py 	modified:   "tests/\347\262\276\347\245\236\345\210\206\346\236\220/\344\270\200\344\270\252\344\272\272\347\232\204\347\226\276\347\227\205\346\230\257\346\224\273\345\207\273\346\200\247\345\222\214\345\212\233\346\257\224\345\

--- a/tests/精神分析/一个人的疾病是攻击性和力比多投注或投注方式出了问题.md
+++ b/tests/精神分析/一个人的疾病是攻击性和力比多投注或投注方式出了问题.md
@@ -1,5 +1,5 @@
-一[[个人]]的疾病是[[攻[[击性]]]]和[[力比]]多[[投注]]或投注方式出了[[问题]]
-向[[母亲]][[投注]]（天生）如果母亲[[回应]]不[[恰当]]
-1、[[投注]]到[[代替]][[母亲]]的物体上——>变成恋物癖
-2、[[投注]]到[[自己]]产生的病理性[[自恋]]
-[[代替]][[母亲]]的[[客体]][[不能]][[回应]][[高级]]的[[投注]]
+一[[个人]]的疾病是[[攻[[击性]]]]和[[力比]]多[[投注]]或投注方式出了[[问题]] [[简单提及]]
+向[[母亲]][[投注]]（天生）如果母亲[[回应]]不[[恰当]] [[简单提及]]
+1、[[投注]]到[[代替]][[母亲]]的物体上——>变成恋物癖 [[简单提及]]
+2、[[投注]]到[[自己]]产生的病理性[[自恋]] [[简单提及]]
+[[代替]][[母亲]]的[[客体]][[不能]][[回应]][[高级]]的[[投注]] [[简单提及]]
