--- a/tests/精神分析/克莱因的客体关系理论.md
+++ b/tests/精神分析/克莱因的客体关系理论.md
@@ -1,5 +1,5 @@
-克莱因的[[客体]]关[[[[系理]]论]]
-自闭状态：[[一个]]月内[[原始]]的[[自恋]]阶段，完全没有[[客体]]指向
-发育受损[[可能]]导致儿童孤独症（早期[[自恋]]没有打破）
-核心[[人格]]的[[影响]]：[[早年]]良好的[[父母]][[孩子]][[关系]]，[[形成]]健康的人格。以后出现重大的[[心理]][[创伤]]，会退行到早年，退行到5岁，[[[[神经]]症]][[水平]]（问题不大），退行到更早人格形成期，人格[[障碍]]水平
-[[客体]]关[[[[系理]]论]]主张人类[[行为]]的动力来自对客体寻找，即人际[[关系]]的发展，而非弗洛伊德所说的对快乐的追求
+克莱因的[[客体]]关[[[[系理]]论]] [[简单提及]]
+自闭状态：[[一个]]月内[[原始]]的[[自恋]]阶段，完全没有[[客体]]指向 [[简单提及]]
+发育受损[[可能]]导致儿童孤独症（早期[[自恋]]没有打破） [[简单提及]]
+核心[[人格]]的[[影响]]：[[早年]]良好的[[父母]][[孩子]][[关系]]，[[形成]]健康的人格。以后出现重大的[[心理]][[创伤]]，会退行到早年，退行到5岁，[[[[神经]]症]][[水平]]（问题不大），退行到更早人格形成期，人格[[障碍]]水平 [[简单提及]]
+[[客体]]关[[[[系理]]论]]主张人类[[行为]]的动力来自对客体寻找，即人际[[关系]]的发展，而非弗洛伊德所说的对快乐的追求 [[简单提及]]
