--- a/tests/精神分析/创伤性事件即诱因.md
+++ b/tests/精神分析/创伤性事件即诱因.md
@@ -1,2 +1,2 @@
-[[创伤]]性事件即[[诱因]]
-成年后首次发病可以理解为童年[[创伤]]的延期性反应（[[诱因]]引爆了童年时期埋下的炸药）
+[[创伤]]性事件即[[诱因]] [[简单提及]]
+成年后首次发病可以理解为童年[[创伤]]的延期性反应（[[诱因]]引爆了童年时期埋下的炸药） [[简单提及]]
