--- a/tests/精神分析/原始焦虑：害怕自身破碎担心边界被突破.md
+++ b/tests/精神分析/原始焦虑：害怕自身破碎担心边界被突破.md
@@ -1,2 +1,2 @@
-原始焦虑：害怕自身破碎担心[[边界]]被突破
-疑病症多半[[问题]]在[[人格]][[障碍]]和精神分裂[[症[[水平]]]]
+原始焦虑：害怕自身破碎担心[[边界]]被突破 [[简单提及]]
+疑病症多半[[问题]]在[[人格]][[障碍]]和精神分裂[[症[[水平]]]] [[简单提及]]
