--- a/tests/精神分析/性冲动跟道德之间的关系表现为强迫症.md
+++ b/tests/精神分析/性冲动跟道德之间的关系表现为强迫症.md
@@ -1,6 +1,6 @@
-性冲动跟[[道德]][[之间]]的[[关系]][[表现]]为[[强迫]]症
-[[强迫]]症主要是[[攻[[击性]]]]与[[力比]]多的压抑
-[[仪式]]是[[用来]][[隔离]][[情感]]的
-[[强迫]][[行为]]是[[一种]][[仪式]]，[[隔离]]仪式行为是用[[来隔]][[离[[情感]]]]的——用仪式的行为[[来隔离]]，潜[[意识]]需要这种行为来[[隔[[离情]]]]感——>不要有更糟糕的事情
+性冲动跟[[道德]][[之间]]的[[关系]][[表现]]为[[强迫]]症 [[简单提及]]
+[[强迫]]症主要是[[攻[[击性]]]]与[[力比]]多的压抑 [[简单提及]]
+[[仪式]]是[[用来]][[隔离]][[情感]]的 [[简单提及]]
+[[强迫]][[行为]]是[[一种]][[仪式]]，[[隔离]]仪式行为是用[[来隔]][[离[[情感]]]]的——用仪式的行为[[来隔离]]，潜[[意识]]需要这种行为来[[隔[[离情]]]]感——>不要有更糟糕的事情 [[简单提及]]
 例：
-洗手是[[一种]][[象征]]，洗掉的不是脏东西，而是[[道德]]上的堕落，内[[心中]]幻想做了什么，超我对[[自己]]的[[惩罚]]
+洗手是[[一种]][[象征]]，洗掉的不是脏东西，而是[[道德]]上的堕落，内[[心中]]幻想做了什么，超我对[[自己]]的[[惩罚]] [[简单提及]]
