--- a/tests/精神分析/攻击性与力比多的表现化.md
+++ b/tests/精神分析/攻击性与力比多的表现化.md
@@ -1,2 +1,2 @@
-[[攻[[击性]]]]与[[力比]]多的[[表现]]化：唠叨是[[力[[比多]]]]的[[表达]]化还停留在口欲期，与世界的链接停留在嘴巴，用语言对[[孩子]]进行[[心理]]强奸
-使[[攻[[击性]]]]和[[力比]]多的[[表达]]远离[[原始]]（杀人），我们成长的过程其实就是[[力[[比多]]]]和[[攻击]]性[[象征]]化表达的过程
+[[攻[[击性]]]]与[[力比]]多的[[表现]]化：唠叨是[[力[[比多]]]]的[[表达]]化还停留在口欲期，与世界的链接停留在嘴巴，用语言对[[孩子]]进行[[心理]]强奸 [[简单提及]]
+使[[攻[[击性]]]]和[[力比]]多的[[表达]]远离[[原始]]（杀人），我们成长的过程其实就是[[力[[比多]]]]和[[攻击]]性[[象征]]化表达的过程 [[简单提及]]
